# alpha-1

./: .gitignore  README.md  pyproject.toml
config/: config.yaml
data/raw/: nifty500_tickers.txt
data/runs/alpha_cache/: alpha_library.json  alpha_prompt.txt  alpha_response.json
data/runs/models/: model_bundle.joblib  model_calibration.json
src/: __init__.py  cli.py
src/backtest/: __init__.py  costs.py  engine.py  metrics.py  portfolio.py  simulator.py
src/core/: __init__.py  calendar.py  config.py  data_quality.py  device.py  logging.py  paths.py  seed.py
src/data_layer/: __init__.py  bhavcopy_loader.py  ohlcv_normalize.py  symbol_master.py  yfinance_loader.py
src/features/: __init__.py  feature_store.py  feature_validation.py  indicators.py
src/llm_alpha/: __init__.py  alpha_executor.py  alpha_parser.py  alpha_selection.py  alpha_whitelist.py  prompt_templates.py
src/models/: __init__.py  calibration.py  datasets.py  explain.py  monitoring.py  predict.py  train.py  transformer.py  windowing.py
src/nse_swing_research.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/signals/: __init__.py  generate_signals.py  output_csv.py  preopen_overlay.py
